5_redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ecp-prod
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server", "--appendonly", "yes"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ecp-dev
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379

#
#---
## Redis Secret
#apiVersion: v1
#kind: Secret
#metadata:
#  name: redis-secrets
#  namespace: ecp-dev
#type: Opaque
#stringData:
#  redis-password: "redis123"
#  
#  
#---
## Redis Deployment
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: redis
#  namespace: ecp-dev
#  labels:
#    app: redis
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: redis
#  template:
#    metadata:
#      labels:
#        app: redis
#    spec:
#      containers:
#        - name: redis
#          image: redis:7-alpine
#          ports:
#            - containerPort: 6379
#              name: redis
#
#          # Enable password authentication
#          command: ["redis-server"]
#          args:
#            - "--requirepass"
#            - "$(REDIS_PASSWORD)"
#
#          env:
#            - name: REDIS_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: redis-secrets
#                  key: redis-password
#
#          volumeMounts:
#            - name: redis-data
#              mountPath: /data
#
#          resources:
#            requests:
#              memory: "128Mi"
#              cpu: "100m"
#            limits:
#              memory: "256Mi"
#              cpu: "300m"
#
#      volumes:
#        - name: redis-data
#          emptyDir: {}   # Use PVC in production
#
#---
## Redis Service
#apiVersion: v1
#kind: Service
#metadata:
#  name: redis
#  namespace: ecp-dev
#  labels:
#    app: redis
#spec:
#  type: ClusterIP
#  selector:
#    app: redis
#  ports:
#    - name: redis
#      port: 6379
#      targetPort: 6379
#      protocol: TCP
